k8s/deploy/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lfeoperatorfabric
    service: config
  name: config
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  - name: "4000"
    port: 4000
    targetPort: 5005
  selector:
    service: config
