k8s/deploy/oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lfeoperatorfabric
    service: oauth2
  name: oauth2
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  - name: "5000"
    port: 5000
    targetPort: 5005
  selector:
    service: oauth2
