k8s/deploy/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lfeoperatorfabric
    service: registry
  name: registry
spec:
  ports:
  - name: "http"
    port: 8080
  clusterIP: None # use for HA
  selector:
    service: registry
