k8s/deploy/web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lfeoperatorfabric
    service: web-ui
  name: web-ui
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  - name: "4200"
    port: 4200
    targetPort: 5005
  selector:
    service: web-ui
